# BOLuS

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
bolus/excel_tool/: input_reader.py  main.py  result_reader.py
bolus/toolbox/: geolib_utils.py  geometry.py  loads.py  model.py  model_creator.py  modifier.py  results.py  state.py  subsoil.py  waternet_config.py  waternet_creator.py
dstability_tool/: Invoer D-Stability tool.xlsx  creator.py  excel_utils.py  input_reader.py  main.py
dstability_toolbox/: calculation_settings.py  dm_getter.py  execute.py  geometry.py  loads.py  model.py  model_creator.py  modifier.py  report.py  results.py  sequence.py  soils.py  state.py  subsoil.py  water.py
excel_tool/: Invoer BOLuS.xlsx  Invoer D-Stability tool.xlsx  creator.py  excel_utils.py  geolib.env  input_reader.py  main.py  raw_user_input.json
handleiding/: Figuren handleiding.pptx  Gebruikershandleiding BOLuS v1.0.docx  Gebruikershandleiding BOLuS v1.1.docx  Gebruikershandleiding BOLuS v1.2.docx  Gebruikershandleiding BOLuS vx.x.docx  Waterspanningen handmatig.docx
input_handler/: Invoer D-Stability tool.xlsx  creator.py  excel_utils.py  geolib.env  input_reader.py  main.py  user_input.py
src/bolus/excel_tool/: main.py  (+3 more)
toolbox/: calculation_settings.py  geolib_utils.py  geometry.py  loads.py  model.py  model_creator.py  modifier.py  results.py  soils.py  state.py  subsoil.py  water.py  water_creater.py  waternet.py  waternet_config.py  waternet_creator.py
utils/: dict_utils.py  file_utils.py  geometry_utils.py  list_utils.py
(+58 files in other folders)
