[project]
name = "bolus"
version = "0.2.0c"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.10.2",
    "openpyxl==3.1.5",
    "shapely>=2.0.6,<3",
    "d-geolib@git+https://github.com/KentropDevelopment/GEOLib.git@240-fix-connect-layers"
]

[tool.setuptools.packages.find]
where = ["bolus"]
exclude = ["handleiding"]